Fix uneven spacing due to block rendering.

--- a/_source/_includes/sass/components/_navigation.scss
+++ b/_source/_includes/sass/components/_navigation.scss
@@ -118,7 +118,7 @@ body.loves .nav-link-loves {
 
   .nav-link-portfolio,
   .nav-link-loves,
-  .nav-link-stream { display: block; }
+  .nav-link-stream { display: inline-block; }
 
   .nav-title,
   .nav-contact {
